tests/golden/parse_errors/function_type_missing_colon.cd
let f: fun(number) number = fun (x: number): number {
  return x;
};
